---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type i : int\nvar o, w, u : i\nput : o, w : o : u : o..\n"
---
"i"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"o"@"src/main.t:17..18" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"w"@"src/main.t:20..21" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"u"@"src/main.t:23..24" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
